fix: exporter api z-index

--- a/mainsite/static/mainsite/style.css
+++ b/mainsite/static/mainsite/style.css
@@ -811,6 +811,7 @@ input[type='submit'].copy-bottom:focus:hover{
   width: 100%;
   margin-top:40px;
   height: auto;
+  z-index: 2;
 }
 .image-scale{
   position: absolute;
